# nimbusv1

./: CLAUDE.md  fastapi-server.spec  package.json  pnpm-lock.yaml  pyproject.toml
src-python/: main.py  pyinstaller.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/app/: page.tsx
