[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Badhan Sen <badhan.cse@gmail.com>"]
package-mode = false 
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
pyinstaller = "^6.10.0"
fastapi = { extras = ["standard"], version = "^0.115.0" }
colorama = "^0.4.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
build = "src-python.pyinstaller:install"